--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.js" integrity="sha512-zoJXRvW2gC8Z0Xo3lBbao5+AS3g6YWr5ztKqaicua11xHo+AvE1b0lT9ODgrHTmNUxeCw0Ry4BGRYZfXu70weg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
-        const socket = io('https://sockets-wm93.vercel.app/'); //socket del cliente
+        const socket = io('https://sockets-wm93-ayu48wqf9-aleechetorres-gmailcom.vercel.app/'); //socket del cliente
         //Referencias a los elementos del DOM
         const formulario = document.querySelector('.miFormulario'); 
         const mensajes = document.querySelector('#misMensajes');
